# ovh-auto-dns-update

./: README.md  pyproject.toml
.github/workflows/: onRelease.yml
src/ovh_auto_dns_update/: api_contoller.py  app_dir_handler.py  main.py  utils.py
