[project]
name = "ovh-auto-dns-update"
version = "0.1.0"
description = "Automatically update OVH DNS settings when your IP changes"
authors = [
    {name = "xDepcio", email = "olek.drwal@gmail.com"},
]
dependencies = [
    "ovh>=1.2.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.3",
    "pyinstaller>=6.10.0",
]
requires-python = "<3.14,>=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
